--- a/pages/summary.html
+++ b/pages/summary.html
@@ -1,92 +1,88 @@
 <!DOCTYPE html>
 <html lang="de">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
-        <title>Kanban Board</title>
-        <link rel="icon" href="#" type="image/x-icon">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="/style.css">
+    <title>Kanban Board</title>
+    <link rel="icon" href="#" type="image/x-icon">
 
-        <link rel="stylesheet" href="/styles/header.css">
-        <link rel="stylesheet" href="/styles/navigation.css">
-        <link rel="stylesheet" href="/styles/board.css">
-        <link rel="stylesheet" href="/styles/add_task.css">
-        <link rel="stylesheet" href="/styles/dialog_add_contact.css">
-        <link rel="stylesheet" href="/styles/contacts.css">
-        <link rel="stylesheet" href="/styles/summary.css">
-        <link rel="stylesheet" href="/styles/data_privacy.css">
-        <link rel="stylesheet" href="/styles/legal_notes.css">
-    </head>
+    <link rel="stylesheet" href="/style.css">
 
-    <body>
+    <link rel="stylesheet" href="/styles/header.css">
+    <link rel="stylesheet" href="/styles/navigation.css">
+    <link rel="stylesheet" href="/styles/board.css">
+    <link rel="stylesheet" href="/styles/add_task.css">
+    <link rel="stylesheet" href="/styles/dialog_add_contact.css">
+    <link rel="stylesheet" href="/styles/contacts.css">
+    <link rel="stylesheet" href="/styles/summary.css">
+    <link rel="stylesheet" href="/styles/data_privacy.css">
+    <link rel="stylesheet" href="/styles/legal_notes.css">
+</head>
 
-        <header id="header">
-            <span id="page_title">Kanban Project Management Tool</span>
-            <div id="info_container">
-                <img id="help_img" src="/img/help.svg" alt="Help auestion mark">
-                <img src="#" alt="User picture">
-            </div>
-        </header>
-        <section class="nav_bar_side">
-            <img id="logo" src="/img/logo-white.png" alt="Join Logo">
+<body>
+
+    <main>
+
+        <nav id="nav-menu">
+            <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
             <div>
-            <a href="summary.html" class="nav_bar_side_btn"><img src="/img/summary.svg" alt="Summary">Summary</a>
-            <a href="add_task.html" class="nav_bar_side_btn"><img src="/img/add-task.svg" alt="Add Task">Add Task</a>
-            <a href="board.html" class="nav_bar_side_btn"><img src="/img/board.svg" alt="Board">Board</a>
-            <a href="contacts.html" class="nav_bar_side_btn"><img src="/img/contacts.svg" alt="Contacts">Contacts</a>
+                <a href="summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
+                <a href="add_task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
+                <a href="board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
+                <a href="contacts.html"><img src="../assets/img/contacts.svg" alt="Contacts">Contacts</a>
             </div>
-            <div class="nav_bar_side_bottom">
-                <a href="privacy_policy.html" class="nav_bar_side_btn">Privacy Policy</a>
-                <a href="legal_notice.html" class="nav_bar_side_btn">Legal notice</a>
+            <div class="nav-menu-bottom-button">
+                <a href="privacy_policy.html">Privacy Policy</a>
+                <a href="legal_notice.html">Legal notice</a>
             </div>
-        </section>
+        </nav>
 
-        <main id="summary_page_content">
-            <nav id="nav_menu">
-                <img id="logo" src="/img/logo-white.png" alt="Join Logo">
-                    <div>
-                        <a href="summary.html"><img src="/img/summary.svg" alt="Summary">Summary</a>
-                        <a href="add_task.html"><img src="/img/add-task.svg" alt="Add Task">Add Task</a>
-                        <a href="board.html"><img src="/img/board.svg" alt="Board">Board</a>
-                        <a href="contacts.html"><img src="/img/contacts.svg" alt="Contacts">Contacts</a>
+        <div id="summary-page-container" class="content">
+            <header id="header">
+                <div class="header__content content-wrapper">
+                    <span id="page-title">Kanban Project Management Tool</span>
+                    <div id="info-container">
+                        <img id="help-img" src="../assets/img/help.svg" alt="Help auestion mark">
+                        <img src="#" alt="User picture">
                     </div>
-                    <div class="nav-menu-bottom-button">
-                        <a href="privacy_policy.html">Privacy Policy</a>
-                        <a href="legal_notice.html">Legal notice</a>
-                    </div>
-            </nav>
-            <section id="summary_content">
-                <div class="summary_content_header">
-                    <h2>Join 360</h2>
-                    <p>Key Metrics at a Glance</p>
+                </div>
+            </header>
+
+
+            <section id="summary-content">
+                <div class="summary_content__header content-wrapper">
+                    <h1>Join 360</h1>
+                    <div id="blue-seperator"></div>
+                    <span>Key Metrics at a Glance</span>
                 </div>
             </section>
-        </main>
+        </div>
+    </main>
 
-        <script src="./script.js"></script>
-        <script src="./scripts/login.js"></script>
-        <script src="./scripts/main.js"></script>
-        <script src="./scripts/navigation.js"></script>
+    <script src="./script.js"></script>
+    <script src="./scripts/login.js"></script>
+    <script src="./scripts/main.js"></script>
+    <script src="./scripts/navigation.js"></script>
 
-        <script src="./scripts/board.js"></script>
-        <script src="./scripts/drag_and_drop.js"></script>
-        <script src="./scripts/ticket.js"></script>
+    <script src="./scripts/board.js"></script>
+    <script src="./scripts/drag_and_drop.js"></script>
+    <script src="./scripts/ticket.js"></script>
 
-        <script src="./scripts/add_task.js"></script>
-        <script src="./scripts/dialog_add_contact.js"></script>
-        <script src="./scripts/contacts.js"></script>
-        <script src="./scripts/greetings.js"></script>
-        <script src="./scripts/summary.js"></script>
+    <script src="./scripts/add_task.js"></script>
+    <script src="./scripts/dialog_add_contact.js"></script>
+    <script src="./scripts/contacts.js"></script>
+    <script src="./scripts/greetings.js"></script>
+    <script src="./scripts/summary.js"></script>
 
-        <script src="./templates/tpl_login.js"></script>
-        <script src="./templates/tpl_ticket.js"></script>
-        <script src="./templates/tpl_navigation.js"></script>
-        <script src="./templates/tpl_board.js"></script>
-        <script src="./templates/tpl_add_task.js"></script>
-        <script src="./templates/tpl_summary.js"></script>
-    </body>
+    <script src="./templates/tpl_login.js"></script>
+    <script src="./templates/tpl_ticket.js"></script>
+    <script src="./templates/tpl_navigation.js"></script>
+    <script src="./templates/tpl_board.js"></script>
+    <script src="./templates/tpl_add_task.js"></script>
+    <script src="./templates/tpl_summary.js"></script>
+
+</body>
 
 </html>
