--- a/pages/legal-notice.html
+++ b/pages/legal-notice.html
@@ -14,23 +14,23 @@
         <link rel="stylesheet" href="/styles/header.css">
         <link rel="stylesheet" href="/styles/navigation.css">
         <link rel="stylesheet" href="/styles/board.css">
-        <link rel="stylesheet" href="/styles/add_task.css">
-        <link rel="stylesheet" href="/styles/dialog_add_contact.css">
+        <link rel="stylesheet" href="/styles/add-task.css">
+        <link rel="stylesheet" href="/styles/dialog-add-contact.css">
         <link rel="stylesheet" href="/styles/contacts.css">
         <link rel="stylesheet" href="/styles/summary.css">
-        <link rel="stylesheet" href="/styles/data_privacy.css">
-        <link rel="stylesheet" href="/styles/legal_notes.css">
+        <link rel="stylesheet" href="/styles/data-privacy.css">
+        <link rel="stylesheet" href="/styles/legal-notes.css">
     </head>
 
     <body>
       
         <main>
 
-            <nav id="nav_menu">
+            <nav id="nav-menu">
                 <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
                     <div>
                         <a href="summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
-                        <a href="add_task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
+                        <a href="add-task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
                         <a href="board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
                         <a href="contacts.html"><img src="../assets/img/contacts.svg" alt="Contacts">Contacts</a>
                     </div>
@@ -52,63 +52,65 @@
                 </header>
 
                 <section id="legal-content" class="content-wrapper">
-                    <h1>Private Policy</h1>
+                    <h1>Legal Notice</h1>
                     <div>
-                        <h2>Imprint</h2>
-                        <p><strong>Student Names:</strong> [Student Names List]</p>
-                        <p><strong>Address:</strong> [Address of the JOIN operator - e.g. one of the students]</p>
-                        <p><strong>Postcode and City:</strong> [Postcode and city]</p>
-                        <p><strong>Email:</strong> [Email]</p>
-
+                        <h2>Imprint</h2><br>
+                        <p><strong>Student Names:</strong> Sascha Keßler, Sebastian Hedwig, Marvin Lenhart</p>
+                        <p><strong>Address:</strong> Sebastian Hedwig</p>
+                        <p><strong>Postcode and City:</strong> 65439 Flörsheim am Main</p>
+                        <p><strong>Email:</strong> <a href="mailto: sebastian.hedwig@web.de">sebastian.hedwig@web.de</a></p>
+                        <br><br>
                         <h3>Acceptance of Terms</h3>
                         <p>
-                            By accessing and using Join (Product), you acknowledge and agree to the following terms and conditions,<br>
-                            and any policies, guidelines, or amendments thereto that may be presented to you from time to time.<br>
-                            We, the listed students, may update or change the terms and conditions from time to time without notice.<br>
+                            By accessing and using Join (Product), you acknowledge and agree to the following terms and conditions,
+                            and any policies, guidelines, or amendments thereto that may be presented to you from time to time.
+                            We, the listed students, may update or change the terms and conditions from time to time without notice.
                         </p>
-
+                        <br><br>
                         <h3>Scope and Ownership of the Product</h3>
                         <p>
-                            Join has been developed as part of a student group project in a web development bootcamp at the Developer Akademie GmbH.<br>
-                            It has an educational purpose and is not intended for extensive personal &amp; business usage.<br>
-                            As such, we cannot guarantee consistent availability, reliability, accuracy, or any other aspect of quality regarding this Product.<br>
+                            Join has been developed as part of a student group project in a web development bootcamp at the Developer Akademie GmbH.
+                            It has an educational purpose and is not intended for extensive personal &amp; business usage.
+                            As such, we cannot guarantee consistent availability, reliability, accuracy, or any other aspect of quality regarding this Product.
                         </p>
+                        <br>
                         <p>
-                            The design of Join is owned by the Developer Akademie GmbH. Unauthorized use, reproduction, modification, distribution,<br>
-                            or replication of the design is strictly prohibited.<br>
+                            The design of Join is owned by the Developer Akademie GmbH. Unauthorized use, reproduction, modification, distribution,
+                            or replication of the design is strictly prohibited.
                         </p>
+                        <br><br>
 
                         <h3>Proprietary Rights</h3>
                         <p>
-                            Aside from the design owned by Developer Akademie GmbH, we, the listed students, retain all proprietary<br>
-                            rights in Join, including any associated copyrighted material, trademarks, and other proprietary information.<br>
+                            Aside from the design owned by Developer Akademie GmbH, we, the listed students, retain all proprietary
+                            rights in Join, including any associated copyrighted material, trademarks, and other proprietary information.
                         </p>
-
+                        <br><br>
                         <h3>Use of the Product</h3>
                         <p>
-                            Join is intended to be used for lawful purposes only, in accordance with all applicable laws and regulations.<br>
-                            Any use of Join for illegal activities, or to harass, harm, threaten, or intimidate another person, is strictly prohibited.<br>
-                            You are solely responsible for your interactions with other users of Join.<br>
+                            Join is intended to be used for lawful purposes only, in accordance with all applicable laws and regulations.
+                            Any use of Join for illegal activities, or to harass, harm, threaten, or intimidate another person, is strictly prohibited.
+                            You are solely responsible for your interactions with other users of Join.
                         </p>
-
+                        <br><br>
                         <h3>Disclaimer of Warranties and Limitation of Liability</h3>
                         <p>
-                            Join is provided "as is" without warranty of any kind, whether express or implied, including but not limited to the implied warranties<br>
-                            of merchantability, fitness for a particular purpose, and non-infringement. In no event will we, the listed students,<br>
-                            or the Developer Akademie, be liable for any direct, indirect, incidental, special, consequential or exemplary damages,<br>
-                            including but not limited to, damages for loss of profits, goodwill, use, data, or other intangible losses,<br>
-                            even if we have been advised of the possibility of such damages, arising out of or in connection with the use or performance of Join.<br>
+                            Join is provided "as is" without warranty of any kind, whether express or implied, including but not limited to the implied warranties
+                            of merchantability, fitness for a particular purpose, and non-infringement. In no event will we, the listed students,
+                            or the Developer Akademie, be liable for any direct, indirect, incidental, special, consequential or exemplary damages,
+                            including but not limited to, damages for loss of profits, goodwill, use, data, or other intangible losses,
+                            even if we have been advised of the possibility of such damages, arising out of or in connection with the use or performance of Join.
                         </p>
-
+                        <br><br>
                         <h3>Indemnity</h3>
                         <p>
-                            You agree to indemnify, defend and hold harmless us, the listed students, the Developer Akademie, and our<br>
-                            affiliates, partners, officers, directors, agents, and employees, from and against any claim, demand, loss,<br>
-                            damage, cost, or liability (including reasonable legal fees) arising out of or relating to your use of Join<br>
-                            and/or your breach of this Legal Notice.<br>
+                            You agree to indemnify, defend and hold harmless us, the listed students, the Developer Akademie, and our
+                            affiliates, partners, officers, directors, agents, and employees, from and against any claim, demand, loss,
+                            damage, cost, or liability (including reasonable legal fees) arising out of or relating to your use of Join
+                            and/or your breach of this Legal Notice.
                         </p>
-
-                        <p><strong>For any questions or notices, please contact us at [Contact Email].</strong></p>
+                        <br><br>
+                        <p><strong>For any questions or notices, please contact us <a href="mailto: sebastian.hedwig@web.de">sebastian.hedwig@web.de</a>.</strong></p>
                         <p><em>Date: July 26, 2023</em></p>
                     </div>
                 </section>
