--- a/pages/summary.html
+++ b/pages/summary.html
@@ -8,17 +8,17 @@
     <title>Kanban Board</title>
     <link rel="icon" href="#" type="image/x-icon">
 
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../style.css">
 
-    <link rel="stylesheet" href="/styles/header.css">
-    <link rel="stylesheet" href="/styles/navigation.css">
-    <link rel="stylesheet" href="/styles/board.css">
-    <link rel="stylesheet" href="/styles/add_task.css">
-    <link rel="stylesheet" href="/styles/dialog_add_contact.css">
-    <link rel="stylesheet" href="/styles/contacts.css">
-    <link rel="stylesheet" href="/styles/summary.css">
-    <link rel="stylesheet" href="/styles/data_privacy.css">
-    <link rel="stylesheet" href="/styles/legal_notes.css">
+    <link rel="stylesheet" href="../styles/header.css">
+    <link rel="stylesheet" href="../styles/navigation.css">
+    <link rel="stylesheet" href="../styles/board.css">
+    <link rel="stylesheet" href="../styles/add_task.css">
+    <link rel="stylesheet" href="../styles/dialog_add_contact.css">
+    <link rel="stylesheet" href="../styles/contacts.css">
+    <link rel="stylesheet" href="../styles/summary.css">
+    <link rel="stylesheet" href="../styles/data_privacy.css">
+    <link rel="stylesheet" href="../styles/legal_notes.css">
 </head>
 
 <body>
