--- a/pages/help.html
+++ b/pages/help.html
@@ -9,18 +9,12 @@
         <link rel="icon" href="../assets/img/logo-black.png" type="image/x-icon">
 
         <link rel="stylesheet" href="../style.css">
-        <link rel="stylesheet" href="../styles/login.css">
-
         <link rel="stylesheet" href="../styles/header.css">
         <link rel="stylesheet" href="../styles/navigation.css">
-        <link rel="stylesheet" href="../styles/board.css">
-        <link rel="stylesheet" href="../styles/add-task.css">
-        <link rel="stylesheet" href="../styles/dialog-add-contact.css">
-        <link rel="stylesheet" href="../styles/contacts.css">
-        <link rel="stylesheet" href="../styles/summary.css">
-        <link rel="stylesheet" href="../styles/data-privacy.css">
-        <link rel="stylesheet" href="../styles/legal-notes.css">
         <link rel="stylesheet" href="../styles/help.css">
+
+        <script src="../script.js">defer</script>
+        <script src="../scripts/navigation.js">defer</script>
     </head>
 
     <body>
@@ -38,9 +32,7 @@
             </div>
         </nav>
 
-
         <main>
-
             <div id="help-page-container" class="content">
                 <header id="header">
                     <div class="header__content content-wrapper">
@@ -56,125 +48,102 @@
                 </header>
 
                 <section id="help-content" class="help-content content-wrapper">
-                <h2>Help</h2>
+                    <h2>Help</h2>
 
-                <p>
-                    Welcome to the help page for <strong>Join</strong>, your guide to using our kanban project management tool. 
-                    Here, we'll provide an overview of what Join is, how it can benefit you, and how to use it.
-                </p>
+                    <p>
+                        Welcome to the help page for <strong>Join</strong>, your guide to using our kanban project management tool. 
+                        Here, we'll provide an overview of what Join is, how it can benefit you, and how to use it.
+                    </p>
 
-                <h3>What is Join?</h3>
-                <p>
-                    Join is a kanban-based project management tool designed and built by a group of dedicated students as part 
-                    of their web development bootcamp at the <strong>Developer Akademie</strong>.
-                </p>
+                    <h3>What is Join?</h3>
+                    <p>
+                        Join is a kanban-based project management tool designed and built by a group of dedicated students as part 
+                        of their web development bootcamp at the <strong>Developer Akademie</strong>.
+                    </p>
 
-                <p>
-                    <em>Kanban</em>, a Japanese term meaning "billboard", is a highly effective method to visualize work, 
-                    limit work-in-progress, and maximize efficiency (or flow). Join leverages the principles of kanban 
-                    to help users manage their tasks and projects in an intuitive, visual interface.
-                </p>
+                    <p>
+                        <em>Kanban</em>, a Japanese term meaning "billboard", is a highly effective method to visualize work, 
+                        limit work-in-progress, and maximize efficiency (or flow). Join leverages the principles of kanban 
+                        to help users manage their tasks and projects in an intuitive, visual interface.
+                    </p>
 
-                <p>
-                    It is important to note that Join is designed as an educational exercise and is not intended for extensive business usage. 
-                    While we strive to ensure the best possible user experience, we cannot guarantee consistent availability, 
-                    reliability, accuracy, or other aspects of quality regarding Join.
-                </p>
+                    <p>
+                        It is important to note that Join is designed as an educational exercise and is not intended for extensive business usage. 
+                        While we strive to ensure the best possible user experience, we cannot guarantee consistent availability, 
+                        reliability, accuracy, or other aspects of quality regarding Join.
+                    </p>
 
-                <h3>How to use it</h3>
-                <p>Here is a step-by-step guide on how to use Join:</p>
+                    <h3>How to use it</h3>
+                    <p>Here is a step-by-step guide on how to use Join:</p>
 
-                <ol>
-                    <li>
-                    <div class="list-content">
-                        <h4>Exploring the Board</h4>
-                        <p>
-                        When you log in to Join, you'll find a default board. This board represents your project and contains four default lists: 
-                        <strong>"To Do"</strong>, <strong>"In Progress"</strong>, <strong>"Await feedback"</strong> and <strong>"Done"</strong>.
-                        </p>
-                    </div>
-                    </li>
+                    <ol>
+                        <li>
+                        <div class="list-content">
+                            <h4>Exploring the Board</h4>
+                            <p>
+                            When you log in to Join, you'll find a default board. This board represents your project and contains four default lists: 
+                            <strong>"To Do"</strong>, <strong>"In Progress"</strong>, <strong>"Await feedback"</strong> and <strong>"Done"</strong>.
+                            </p>
+                        </div>
+                        </li>
 
-                    <li>
-                    <div class="list-content">
-                        <h4>Creating Contacts</h4>
-                        <p>
-                        In Join, you can add contacts to collaborate on your projects. Go to the <strong>Contacts</strong> section, 
-                        click on <strong>"New Contact"</strong>, and fill in the required information. Once added, these contacts can be assigned tasks 
-                        and they can interact with the tasks on the board.
-                        </p>
-                    </div>
-                    </li>
+                        <li>
+                        <div class="list-content">
+                            <h4>Creating Contacts</h4>
+                            <p>
+                            In Join, you can add contacts to collaborate on your projects. Go to the <strong>Contacts</strong> section, 
+                            click on <strong>"New Contact"</strong>, and fill in the required information. Once added, these contacts can be assigned tasks 
+                            and they can interact with the tasks on the board.
+                            </p>
+                        </div>
+                        </li>
 
-                    <li>
-                    <div class="list-content">
-                        <h4>Adding Cards</h4>
-                        <p>
-                        Now that you've added your contacts, you can start adding cards. Cards represent individual tasks. 
-                        Click the <strong>"+"</strong> button under the appropriate list to create a new card. 
-                        Fill in the task details in the card, like task name, description, due date, assignees, etc.
-                        </p>
-                    </div>
-                    </li>
+                        <li>
+                        <div class="list-content">
+                            <h4>Adding Cards</h4>
+                            <p>
+                            Now that you've added your contacts, you can start adding cards. Cards represent individual tasks. 
+                            Click the <strong>"+"</strong> button under the appropriate list to create a new card. 
+                            Fill in the task details in the card, like task name, description, due date, assignees, etc.
+                            </p>
+                        </div>
+                        </li>
 
-                    <li>
-                    <div class="list-content">
-                        <h4>Moving Cards</h4>
-                        <p>
-                        As the task moves from one stage to another, you can reflect that on the board by <strong>dragging and dropping</strong> the card 
-                        from one list to another.
-                        </p>
-                    </div>
-                    </li>
+                        <li>
+                        <div class="list-content">
+                            <h4>Moving Cards</h4>
+                            <p>
+                            As the task moves from one stage to another, you can reflect that on the board by <strong>dragging and dropping</strong> the card 
+                            from one list to another.
+                            </p>
+                        </div>
+                        </li>
 
-                    <li>
-                    <div class="list-content">
-                        <h4>Deleting Cards</h4>
-                        <p>
-                        Once a task is completed, you can either move it to the "Done" list or delete it. 
-                        Deleting a card will <strong>permanently remove</strong> it from the board. 
-                        Please exercise caution when deleting cards, as <strong>this action is irreversible</strong>.
-                        </p>
-                    </div>
-                    </li>
-                </ol>
-                <br>
-                <p>
-                    Remember that using Join effectively requires consistent updates from you and your team 
-                    to ensure the board reflects the current state of your project.
-                </p>
-                <p>
-                    Have more questions about Join? Feel free to contact us at 
-                    <a href="mailto:sebastian.hedwig@web.de">sebastian.hedwig@web.de</a>. 
-                    We're here to help you!
-                </p>
+                        <li>
+                        <div class="list-content">
+                            <h4>Deleting Cards</h4>
+                            <p>
+                            Once a task is completed, you can either move it to the "Done" list or delete it. 
+                            Deleting a card will <strong>permanently remove</strong> it from the board. 
+                            Please exercise caution when deleting cards, as <strong>this action is irreversible</strong>.
+                            </p>
+                        </div>
+                        </li>
+                    </ol>
+                    <br>
+                    <p>
+                        Remember that using Join effectively requires consistent updates from you and your team 
+                        to ensure the board reflects the current state of your project.
+                    </p>
+                    <p>
+                        Have more questions about Join? Feel free to contact us at 
+                        <a href="mailto:sebastian.hedwig@web.de">sebastian.hedwig@web.de</a>. 
+                        We're here to help you!
+                    </p>
 
-                <h3>Enjoy using Join!</h3>
+                    <h3>Enjoy using Join!</h3>
                 </section>
             </div>
         </main>
-
-        <script src="../script.js"></script>
-        <script src="../scripts/login.js"></script>
-        <script src="../scripts/main.js"></script>
-        <script src="../scripts/navigation.js"></script>
-
-        <script src="../scripts/board.js"></script>
-        <script src="../scripts/drag_and_drop.js"></script>
-        <script src="../scripts/ticket.js"></script>
-
-        <script src="../scripts/add_task.js"></script>
-        <script src="../scripts/dialog_add_contact.js"></script>
-        <script src="../scripts/contacts.js"></script>
-        <script src="../scripts/greetings.js"></script>
-        <script src="../scripts/summary.js"></script>
-
-        <script src="../templates/tpl_login.js"></script>
-        <script src="../templates/tpl_ticket.js"></script>
-        <script src="../templates/tpl_navigation.js"></script>
-        <script src="../templates/tpl_board.js"></script>
-        <script src="../templates/tpl_add_task.js"></script>
-        <script src="../templates/tpl_summary.js"></script>
     </body>
-
 </html>
