--- a/pages/legal-notice.html
+++ b/pages/legal-notice.html
@@ -9,17 +9,12 @@
         <link rel="icon" href="../assets/img/logo-black.png" type="image/x-icon">
 
         <link rel="stylesheet" href="../style.css">
-        <link rel="stylesheet" href="../styles/login.css">
-
         <link rel="stylesheet" href="../styles/header.css">
         <link rel="stylesheet" href="../styles/navigation.css">
-        <link rel="stylesheet" href="../styles/board.css">
-        <link rel="stylesheet" href="../styles/add-task.css">
-        <link rel="stylesheet" href="../styles/dialog-add-contact.css">
-        <link rel="stylesheet" href="../styles/contacts.css">
-        <link rel="stylesheet" href="../styles/summary.css">
-        <link rel="stylesheet" href="../styles/data-privacy.css">
         <link rel="stylesheet" href="../styles/legal-notice.css">
+
+        <script src="../script.js">defer</script>
+        <script src="../scripts/navigation.js">defer</script>
     </head>
 
     <body>
@@ -39,7 +34,6 @@
         </nav>
       
         <main>
-
             <div id="legal-page-container" class="content">
                 <header id="header">
                     <div class="header__content content-wrapper">
@@ -63,6 +57,7 @@
                         <p><strong>Postcode and City:</strong> 65439 Flörsheim am Main</p>
                         <p><strong>Email:</strong> <a href="mailto: sebastian.hedwig@web.de">sebastian.hedwig@web.de</a></p>
                         <br><br>
+                        
                         <h4>Acceptance of Terms</h4>
                         <p>
                             By accessing and using Join (Product), you acknowledge and agree to the following terms and conditions,
@@ -70,6 +65,7 @@
                             We, the listed students, may update or change the terms and conditions from time to time without notice.
                         </p>
                         <br><br>
+
                         <h4>Scope and Ownership of the Product</h4>
                         <p>
                             Join has been developed as part of a student group project in a web development bootcamp at the Developer Akademie GmbH.
@@ -89,6 +85,7 @@
                             rights in Join, including any associated copyrighted material, trademarks, and other proprietary information.
                         </p>
                         <br><br>
+
                         <h4>Use of the Product</h4>
                         <p>
                             Join is intended to be used for lawful purposes only, in accordance with all applicable laws and regulations.
@@ -96,6 +93,7 @@
                             You are solely responsible for your interactions with other users of Join.
                         </p>
                         <br><br>
+
                         <h4>Disclaimer of Warranties and Limitation of Liability</h4>
                         <p>
                             Join is provided "as is" without warranty of any kind, whether express or implied, including but not limited to the implied warranties
@@ -105,6 +103,7 @@
                             even if we have been advised of the possibility of such damages, arising out of or in connection with the use or performance of Join.
                         </p>
                         <br><br>
+
                         <h4>Indemnity</h4>
                         <p>
                             You agree to indemnify, defend and hold harmless us, the listed students, the Developer Akademie, and our
@@ -119,28 +118,5 @@
                 </section>
             </div>
         </main>
-
-        <script src="../script.js"></script>
-        <script src="../scripts/login.js"></script>
-        <script src="../scripts/main.js"></script>
-        <script src="../scripts/navigation.js"></script>
-
-        <script src="../scripts/board.js"></script>
-        <script src="../scripts/drag_and_drop.js"></script>
-        <script src="../scripts/ticket.js"></script>
-
-        <script src="../scripts/add_task.js"></script>
-        <script src="../scripts/dialog_add_contact.js"></script>
-        <script src="../scripts/contacts.js"></script>
-        <script src="../scripts/greetings.js"></script>
-        <script src="../scripts/summary.js"></script>
-
-        <script src="../templates/tpl_login.js"></script>
-        <script src="../templates/tpl_ticket.js"></script>
-        <script src="../templates/tpl_navigation.js"></script>
-        <script src="../templates/tpl_board.js"></script>
-        <script src="../templates/tpl_add_task.js"></script>
-        <script src="../templates/tpl_summary.js"></script>
     </body>
-
 </html>
