--- a/pages/board.html
+++ b/pages/board.html
@@ -33,7 +33,7 @@
             <div class="nav-menu__buttons--container">
                 <a href="./summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
                 <a href="./add-task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
-                <a class="nav-button--selected" href="./board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
+                <a class="nav-button--selected deactivated" href="./board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
                 <a href="./contacts.html"><img src="../assets/img/contacts.svg" alt="Contacts">Contacts</a>
             </div>
             <div class="nav-menu__bottom__buttons">
