--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -29,7 +29,7 @@
                 <a href="./summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
                 <a href="add-task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
                 <a href="board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
-                <a class="nav-button--selected" href="contacts.html"><img src="../assets/img/contacts.svg" alt="Contacts">Contacts</a>
+                <a class="nav-button--selected deactivated" href="contacts.html"><img src="../assets/img/contacts.svg" alt="Contacts">Contacts</a>
             </div>
             <div class="nav-menu__bottom__buttons">
                 <a href="privacy-policy.html">Privacy Policy</a>
